# cohere-transcribe-ruby

./: .gitignore  .rubocop.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Gemfile  NOTICE  README.md  Rakefile  THIRD_PARTY_NOTICES.md  cohere-transcribe.gemspec
.github/: dependabot.yml
.github/scripts/: check-release.sh
.github/workflows/: gem-push.yml  main.yml
benchmark/: README.md  installed_gem_wer.py  installed_gem_worker.rb  test_installed_gem_wer.py  test_installed_gem_worker.rb
exe/: cohere-transcribe  cohere-transcribe-doctor
ext/cohere_transcribe_native/: .gitignore  CMakeLists.txt  README.md  audio_abi.cpp  audio_exports.macos  audio_exports.map  cohere_abi.cpp  exports.macos  exports.map  extconf.rb
ext/cohere_transcribe_native/test/: abi_smoke.rb  audio_matrix_smoke.cpp  audio_reliability_smoke.cpp  native_abi_reliability_smoke.cpp  native_batch_projection_probe.rb  native_cancellation_smoke.cpp
lib/cohere/: transcribe.rb
lib/cohere/transcribe/: api.rb  cli.rb  configuration.rb  constants.rb  dense_converter.rb  doctor.rb  errors.rb  gguf_writer.rb  hub.rb  input.rb  loader.rb  model_identity.rb  python_text.rb  pytorch_checkpoint.rb  safetensors.rb  state.rb  types.rb  version.rb
lib/cohere/transcribe/alignment/: ATTRIBUTION.md  LICENSE.uroman  aligner.rb  ctc.rb  text.rb  uroman_data.rb
lib/cohere/transcribe/asr/: batching.rb  failure_policy.rb  native.rb
lib/cohere/transcribe/audio/: ATTRIBUTION.md  decoder.rb  ffmpeg_native.rb  segmentation.rb
lib/cohere/transcribe/internal/: interruptible_native_call.rb  session_ownership.rb  utf8.rb
lib/cohere/transcribe/output/: publication.rb  rendering.rb  timing.rb
lib/cohere/transcribe/runtime/: engine.rb  model_provider.rb  precision.rb  preparation.rb  resources.rb  word_pipeline.rb
lib/cohere/transcribe/state/: checkpoint.rb  contracts.rb  io.rb  locking.rb  manifest.rb
lib/cohere/transcribe/vad/: ATTRIBUTION.md  silero.rb  timestamps.rb
sig/cohere/: transcribe.rbs
test/: test_helper.rb
test/cohere/: api_lifecycle_test.rb  cli_test.rb  configuration_test.rb  converter_test_support.rb  dense_converter_test.rb  doctor_test.rb  gguf_writer_test.rb  hub_test.rb  input_test.rb  model_identity_test.rb  native_build_configuration_test.rb  pytorch_checkpoint_test.rb  safetensors_test.rb  state_atomic_recovery_test.rb  state_test.rb  test_transcribe.rb  types_test.rb
test/cohere/alignment/: aligner_test.rb
test/cohere/asr/: batching_test.rb  failure_policy_test.rb  native_test.rb
test/cohere/audio/: decoder_test.rb  ffmpeg_native_test.rb  segmentation_test.rb
test/cohere/internal/: interruptible_native_call_test.rb  session_ownership_test.rb
test/cohere/output/: publication_schema_test.rb  rendering_test.rb  timing_test.rb
test/cohere/runtime/: engine_test.rb  model_provider_test.rb  precision_test.rb  preparation_test.rb  resources_test.rb  word_pipeline_engine_test.rb  word_pipeline_test.rb
test/cohere/vad/: silero_test.rb  timestamps_test.rb
